schema/testdata/errors/attribute_computed_expression.keel
model Invoice {
    fields {
        items Item[]
    }
}

model Item {
    fields {
        invoice Invoice
        description Text
        price Decimal
        quantity Number
        //expect-error:38:45:AttributeExpressionError:unknown identifier 'invalid'
        unknownVar Decimal @computed(invalid)
        //expect-error:37:42:AttributeExpressionError:unknown identifier 'price'
        //expect-error:45:53:AttributeExpressionError:unknown identifier 'quantity'
        noRootVar Decimal @computed(price * quantity)
        //expect-error:37:53:AttributeExpressionError:expression expected to resolve to type Decimal but it is Text
        wrongType Decimal @computed(item.description)
        //expect-error:31:34:AttributeExpressionError:unknown identifier 'ctx'
        ctx Boolean @computed(ctx.isAuthenticated)
        //expect-error:27:50:AttributeNotAllowedError:@computed cannot be used on field of type Identity
        identity Identity @computed(ctx.identity)
        //expect-error:33:43:AttributeArgumentError:@computed expressions cannot reference itself
        total Decimal @computed(item.total * 5)
        //expect-error:54:55:AttributeExpressionError:cannot use operator '-' with types Text and Text
        invalidStringOp Text @computed("Description" - item.description)
        //expect-error:60:61:AttributeExpressionError:cannot use operator '+' with types Text and Number
        invalidStringValue Text @computed(item.description + 1)
    }
    actions {
        get getItem(id) 
    }
}